<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search_previous"
        android:icon="@drawable/ic_skip_previous"
        android:title="@string/help_search_prev"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search_next"
        android:icon="@drawable/ic_skip_next"
        android:title="@string/help_search_next"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_fullscreen_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/view_in_code_editor"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_replace_rule"
        android:title="@string/menu_replace_rule"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_effective_replaces"
        android:title="@string/effective_replaces"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_manual_replace_rule"
        android:title="@string/manual_replace_rule"
        android:visible="false"
        app:showAsAction="never" />

</menu>
