...

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/source_import_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search" />

...
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:flexWrap="wrap"
        app:justifyContent="space_between">

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/tv_footer_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:visibility="gone"
            tools:ignore="RtlHardcoded"
            tools:visibility="visible" />
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/secondaryText"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"
                tools:visibility="visible" />

            <io.legado.app.ui.widget.text.AccentTextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/ok"
                android:visibility="gone"
                tools:ignore="RtlHardcoded"
...
