<?xml version="1.0" encoding="utf-8"?>
<io.legado.app.ui.widget.text.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_input_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <io.legado.app.ui.widget.code.CodeView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:inputType="textMultiLine"
        tools:ignore="SpeakableTextPresentCheck" />

</io.legado.app.ui.widget.text.TextInputLayout>
